# Kruskal-Finite

./: AUTHORS.md  README.md  codemeta.json  coq-kruskal-finite.opam
.github/workflows/: main.yml
theories/: _CoqProject  choice.v  decide.v  finite.v
theories/examples/: trees.v
